[gd_scene load_steps=12 format=2]

[ext_resource path="res://textures/cloud/angry_cloud2.png" type="Texture" id=1]
[ext_resource path="res://textures/cloud/angry_cloud3.png" type="Texture" id=2]
[ext_resource path="res://textures/cloud/angry_cloud1.png" type="Texture" id=3]
[ext_resource path="res://textures/water.png" type="Texture" id=4]
[ext_resource path="res://game/enemies/StormCloud.gd" type="Script" id=5]
[ext_resource path="res://game/enemies/storm_rain.gd" type="Script" id=6]
[ext_resource path="res://game/enemies/StormCloudCollider.gd" type="Script" id=7]
[ext_resource path="res://game/enemies/StrikeAudio.gd" type="Script" id=8]
[ext_resource path="res://audio/strike.wav" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29.5, 130 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "strike",
"speed": 2.0
} ]

[node name="StormCloud" type="Node2D"]
script = ExtResource( 5 )

[node name="StormCloudArea" type="Area2D" parent="."]
position = Vector2( -1, -66 )
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StormCloudArea"]
position = Vector2( 1, 60 )
shape = SubResource( 2 )
script = ExtResource( 7 )

[node name="Rain" type="CPUParticles2D" parent="."]
position = Vector2( 2, -128 )
amount = 70
lifetime = 2.0
preprocess = 243.12
speed_scale = 2.0
texture = ExtResource( 4 )
emission_shape = 2
emission_rect_extents = Vector2( 24.83, 1 )
scale_amount = 0.1
scale_amount_random = 0.05
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -2, -126 )
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "strike"

[node name="StrikeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="LifetimeTimer" type="Timer" parent="."]
wait_time = 6.5
one_shot = true
autostart = true

[node name="Strike" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = 5.628
bus = "SFX"
script = ExtResource( 8 )

[connection signal="strike" from="." to="StormCloudArea/CollisionShape2D" method="_on_StormCloud_strike"]
[connection signal="strike" from="." to="Rain" method="_on_StormCloud_strike"]
[connection signal="strike" from="." to="Strike" method="_on_StormCloud_strike"]
[connection signal="timeout" from="StrikeTimer" to="." method="_on_StrikeTimer_timeout"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_LifetimeTimer_timeout"]
